# db-benchmark

./: .gitignore  README.md  history.html  index.html  logs.csv  logs.csv.md5  path.env  run.conf  run.sh  tech.html  time.csv  time.csv.md5
R-arrow/: VERSION  groupby-R-arrow.R  join-R-arrow.R  setup-R-arrow.sh  upg-R-arrow.sh  ver-R-arrow.sh
_benchplot/: benchplot-dict.R  benchplot.R
_control/: data.csv  nodenames.csv  questions.csv  skipped_benchmarks.csv  solutions.csv  timeout.csv
_data/: rollfun-datagen.R
_launcher/: launcher.R  setup.sh  solution.R
_report/: history.Rmd  index.Rmd  report.R
_run/: download_large.sh  download_large_data.sh  download_small_medium.sh  generate_report.sh  partitioned_run.sh  run_large.sh  run_large_groupby_join.sh  run_medium.sh  run_small.sh
_setup_utils/: install_all_solutions.py  prep_solutions.py  setup_small.sh
_utils/: answers-validation.R  format_and_mount.sh  generate-data-small.sh  install_all_solutions.py  prep_solutions.py  repro.sh  rollfun-ans-validation.txt  setup-small.sh  validate_no_errors.sh
chdb/: groupby-chdb.py  join-chdb.py
clickhouse/: VERSION  ch.sh  clickhouseOutput.txt  exec.sh  join-clickhouse.sh  setup-clickhouse.sh  upg-clickhouse.sh  ver-clickhouse.sh
collapse/: groupby-collapse.R  groupby2014-collapse.R  join-collapse.R  setup-collapse.sh
dask/: groupby-dask.py  groupby-dask2.py  groupby_dask.py  (+3 more)
haskell/: BenchmarkCommon.hs  VERSION  exec.sh  groupby-haskell.hs  haskell-benchmark.cabal  join-haskell.hs  setup-haskell.sh  stack.yaml  timeq.hs  upg-haskell.sh  ver-haskell.sh
(+51 files in other folders)
